Knet phone client services
Module for registering services provided by Knet phone client assembly.

--- a/Peruka/Knet.Phone.ArcGIS/Knet.Phone.Client.ArcGIS.csproj
+++ b/Peruka/Knet.Phone.ArcGIS/Knet.Phone.Client.ArcGIS.csproj
@@ -105,6 +105,9 @@
     </Compile>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Autofac">
+      <HintPath>..\packages\Autofac.3.0.1\lib\portable-win+net40+sl50+wp8\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="ESRI.ArcGIS.Client, Version=10.1.1.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
     <Reference Include="ESRI.ArcGIS.Client.Portal, Version=10.1.1.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
     <Reference Include="Newtonsoft.Json">
