--- a/Peruka/Knet.Phone.Client/Knet.Phone.Client.csproj
+++ b/Peruka/Knet.Phone.Client/Knet.Phone.Client.csproj
@@ -93,6 +93,7 @@
     <Compile Include="Converters\StringToVisibilityConverter.cs" />
     <Compile Include="IContent.cs" />
     <Compile Include="IRefreshableContent.cs" />
+    <Compile Include="PhoneClientModule.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SettingsStore\IsolatedSettingsStore.cs" />
     <Compile Include="SettingsStore\SettingsStoreBase.cs" />
