--- a/src/Knet.Phone.ArcGIS/Knet.Phone.Client.ArcGIS.csproj
+++ b/src/Knet.Phone.ArcGIS/Knet.Phone.Client.ArcGIS.csproj
@@ -91,13 +91,28 @@
     <Compile Include="Extensions\IdentityManagerExtensions.cs" />
     <Compile Include="Extensions\MapExtensions.cs" />
     <Compile Include="Extensions\PortalExtensions.cs" />
+    <Compile Include="Extensions\QueryTaskExtensions.cs" />
     <Compile Include="Graphics\GraphicFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Serialization\ArcGISSerializationUtils.cs" />
     <Compile Include="Serialization\JsonSerializer.cs" />
-    <Compile Include="Tasks\AddFeatureParameters.cs" />
-    <Compile Include="Tasks\AddFeatureTask.cs" />
+    <Compile Include="Tasks\AddAttachementParameters.cs" />
+    <Compile Include="Tasks\AddAttachementResults.cs" />
+    <Compile Include="Tasks\AddAttachementTask.cs" />
+    <Compile Include="Tasks\AddAttachmentResponse.cs" />
+    <Compile Include="Tasks\AddFeaturesParameters.cs" />
+    <Compile Include="Tasks\AddFeaturesResult.cs" />
+    <Compile Include="Tasks\AddFeaturesTask.cs" />
+    <Compile Include="Tasks\AttachementInfo.cs" />
+    <Compile Include="Tasks\GetAttachementInfoParameters.cs" />
+    <Compile Include="Tasks\GetAttachementInfoResults.cs" />
+    <Compile Include="Tasks\GetAttachementInfoTask.cs" />
     <Compile Include="Tasks\TaskBase.cs" />
+    <Compile Include="Tasks\TaskResultsBase.cs" />
+    <Compile Include="Tasks\UpdateAttachementTask.cs" />
+    <Compile Include="Tasks\UpdateAttachmentParameters.cs" />
+    <Compile Include="Tasks\UpdateAttachmentResponse.cs" />
+    <Compile Include="Tasks\UpdateAttachmentResults.cs" />
     <Compile Include="UrlResources.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -123,6 +138,7 @@
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).$(TargetFrameworkVersion).Overrides.targets" />
   <Import Project="$(MSBuildExtensionsPath)\Microsoft\$(TargetFrameworkIdentifier)\$(TargetFrameworkVersion)\Microsoft.$(TargetFrameworkIdentifier).CSharp.targets" />
   <ProjectExtensions />
