--- a/src/Peruka/01 Peruka.Phone.Client.Presentation.csproj
+++ b/src/Peruka/01 Peruka.Phone.Client.Presentation.csproj
@@ -101,6 +101,11 @@
       <DependentUpon>LoginView.xaml</DependentUpon>
     </Compile>
     <Compile Include="Login\LoginViewModel.cs" />
+    <Compile Include="Map\CreateRouteLayersTask.cs" />
+    <Compile Include="Map\RouteMapView.xaml.cs">
+      <DependentUpon>RouteMapView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="Map\RouteMapViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Resources\AppResources.Designer.cs">
       <AutoGen>True</AutoGen>
@@ -111,6 +116,10 @@
       <DependentUpon>SplashView.xaml</DependentUpon>
     </Compile>
     <Compile Include="SplashView\SplashViewModel.cs" />
+    <Compile Include="TrackRoute\Details\RouteDetailsView.xaml.cs">
+      <DependentUpon>RouteDetailsView.xaml</DependentUpon>
+    </Compile>
+    <Compile Include="TrackRoute\Details\RouteDetailsViewModel.cs" />
     <Compile Include="TrackRoute\TrackRouteView.xaml.cs">
       <DependentUpon>TrackRouteView.xaml</DependentUpon>
     </Compile>
@@ -125,7 +134,15 @@
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
+    <Page Include="Map\RouteMapView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="SplashView\SplashView.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
+    <Page Include="TrackRoute\Details\RouteDetailsView.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
@@ -194,9 +211,7 @@
     <Reference Include="Caliburn.Micro.Extensions">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\wp8\Caliburn.Micro.Extensions.dll</HintPath>
     </Reference>
-    <Reference Include="Coding4Fun.Phone.Controls">
-      <HintPath>..\packages\Coding4Fun.Phone.Controls.1.6.1\lib\sl4-windowsphone71\Coding4Fun.Phone.Controls.dll</HintPath>
-    </Reference>
+    <Reference Include="ESRI.ArcGIS.Client, Version=10.1.1.0, Culture=neutral, PublicKeyToken=8fc3cc631e44ad86, processorArchitecture=MSIL" />
     <Reference Include="System.Windows.Interactivity, Version=3.9.5.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\wp8\System.Windows.Interactivity.dll</HintPath>
     </Reference>
