--- a/src/PerukaCore/02 Peruka.Phone.Client.Core.csproj
+++ b/src/PerukaCore/02 Peruka.Phone.Client.Core.csproj
@@ -103,6 +103,10 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <Reference Include="Autofac, Version=3.0.0.0, Culture=neutral, PublicKeyToken=17863af14b0044da, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\packages\Autofac.3.0.1\lib\portable-win+net40+sl50+wp8\Autofac.dll</HintPath>
+    </Reference>
     <Reference Include="Caliburn.Micro">
       <HintPath>..\packages\Caliburn.Micro.1.4.1\lib\wp8\Caliburn.Micro.dll</HintPath>
     </Reference>
