--- a/src/PerukaCore/packages.config
+++ b/src/PerukaCore/packages.config
@@ -1,4 +1,5 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="Autofac" version="3.0.1" targetFramework="wp80" />
   <package id="Caliburn.Micro" version="1.4.1" targetFramework="wp80" />
 </packages>
