--- a/src/packages/repositories.config
+++ b/src/packages/repositories.config
@@ -2,6 +2,7 @@
 <repositories>
   <repository path="..\Knet.Phone.ArcGIS\packages.config" />
   <repository path="..\Knet.Phone.Client\packages.config" />
+  <repository path="..\Peruka.Web\packages.config" />
   <repository path="..\Peruka\packages.config" />
   <repository path="..\PerukaCore\packages.config" />
 </repositories>
